--- a/style.css
+++ b/style.css
@@ -148,7 +148,7 @@ iframe {
     }
 }
 
-/* Стилі для маркерованих списків */
+/* марк */
 ul {
     list-style-type: disc;
     padding-left: 20px;
@@ -165,7 +165,7 @@ ul li {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-/* Оголошення лічильника для нумерації списків */
+/* нум */
 ol {
     counter-reset: step-counter;
     list-style-type: none;
@@ -195,7 +195,7 @@ ol li::before {
     font-size: 20px;
 }
 
-/* Стилі для списків визначень */
+/* виз */
 dl {
     margin: 20px auto;
     padding-left: 20px;
