--- a/style.css
+++ b/style.css
@@ -220,7 +220,7 @@ dd {
 }
 
 
-/* style.css */
+/* табл */
 .table-container {
     width: 80%;
     margin: 0 auto;
@@ -257,3 +257,5 @@ dd {
 .cell-green {
     background-color: #32cb00;
 }
+
+
